syntax = "proto3";
package customer;

// Định nghĩa server Customer
service Customer {

 
  // Tạo một customer: Unary methods
  rpc CreateCustomer (CustomerRequest) returns (CustomerResponse) {}

  // Get customer theo CustomerFilter: A server-to-client streaming RPC.
  rpc GetCustomers(CustomerFilter) returns (stream CustomerRequest) {}

  // Create multi customer: A client-to-server streaming RPC.
  rpc CreateMultiCustomers(stream CustomerRequest) returns (CustomerResponse){}
  
  // Get multi customer  A Bidirectional streaming RPC.
  rpc GetMultiCustomers(stream CustomerFilter) returns (stream CustomerRequest) {}

}

// Request message để tạo một customer mới.
message CustomerRequest {
  int32 id = 1;  // Unique ID
  string name = 2;
  string email = 3;
  string phone= 4;
  
  message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string zip = 4;
    bool isShippingAddress = 5; 
  }

  repeated Address addresses = 5;
}

message CustomerResponse {
  int32 id = 1;
  bool success = 2;
}
message CustomerFilter {
  string keyword = 1;
}